src/objects/CP_Farm_Score__c.object
<CustomObject>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <referenceTo>CBL_CoffeeBaseline__c</referenceTo>
        <relationshipLabel>CP Scores</relationshipLabel>
        <relationshipName>Baseline</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coffee_Growing_Practices_Met__c</fullName>
        <label>Coffee Growing Practices Met</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coffee_Growing__c</fullName>
        <formula>Coffee_Growing_Practices_Met__c / 34</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coffee Growing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Farm__c</fullName>
        <label>Farm</label>
        <referenceTo>CBL_Farm__c</referenceTo>
        <relationshipLabel>CP Scores</relationshipLabel>
        <relationshipName>Farm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Score__c</fullName>
        <formula>( Social_Responsibility__c * 0.4186) + ( Coffee_Growing__c  * 0.4186) + ( Wet_Coffee_Processing__c  * 0.1628)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Social_Responsibility_Practices_Met__c</fullName>
        <label>Social Responsibility Practices Met</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Responsibility__c</fullName>
        <formula>Social_Responsibility_Practices_Met__c / 18</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Responsibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wet_Coffee_Processing_Practices_Met__c</fullName>
        <label>Wet Coffee Processing Practices Met</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wet_Coffee_Processing__c</fullName>
        <formula>Wet_Coffee_Processing_Practices_Met__c / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wet Coffee Processing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>CP Farm Score</label>
    <nameField>
        <displayFormat>CPS-{000000}</displayFormat>
        <label>CP Farm Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Farm Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>